--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -16,3 +16,10 @@
 
 	<% end %>
 </div>
+<% if @stock %>
+	<div id="stock-lookup-results" class="well results-block">
+	  <strong>Symbol:</strong> <%= @stock.ticker %>
+	  <strong>Name:</strong> <%= @stock.name %>
+	  <strong>Price:</strong> <%= @stock.last_price %>
+	</div>
+<% end %>
